--- a/ALM-prod/docker-compose-prod.yml
+++ b/ALM-prod/docker-compose-prod.yml
@@ -16,10 +16,14 @@ services:
     depends_on:
       - mongo
 
-#  myapp:
-#    build: .
-#    ports:
-#      - 8085:8080
-#    depends_on:
-#      - mongo
-
+  myapp:
+    image: myimage
+    ports:
+      - 8080:8080
+    environment:
+      DB_HOST: mongo
+      DB_PORT: 27017
+      DB_NAME: db-prod
+      SPRING_PROFILES_ACTIVE: prod
+    depends_on:
+      - mongo
