--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Java JDK 11
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopts'
+          distribution: 'adopt'
           java-version: '11'
 
 
