--- a/ALM-prod/docker-compose-prod.yml
+++ b/ALM-prod/docker-compose-prod.yml
@@ -17,7 +17,7 @@ services:
       - mongo
 
   myapp:
-    image: myimage
+    image: philipzdocker/my-app:latest
     ports:
       - 8080:8080
     environment:
